
PROJECT(HELLO)
SET(SRC_LIST main.c)
#SET(SRC_LIST "main.c")
#SET(SRC_LIST main)不要偷这个懒
MESSAGE(STATUS "This is BINARY dir " ${PROJECT_BINARY_DIR})
#MESSAGE(STATUS "This is BINARY dir " ${HELLO_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir " ${PROJECT_SOURCE_DIR})
ADD_EXECUTABLE(hello ${SRC_LIST})

